k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-api
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atlas-api
  template:
    metadata:
      labels:
        app: atlas-api
    spec:
      containers:
      - name: api
        image: 640168448737.dkr.ecr.ap-south-1.amazonaws.com/atlas-api:1.0
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
